# yral-video-upload-service

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
.github/workflows/: deploy-preview.yml  docker-publish.yml
src/: app_state.rs  main.rs
src/api/: get_upload_url.rs  mark_post_as_published.rs  mod.rs  update_video_metadata.rs
src/utils/: events_interface.rs  mod.rs  notification_client.rs  storj_interface.rs  types.rs
