[package]
name = "yral-video-upload-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
candid = "0.10.20"
env_logger = "0.11.8"
hex = "0.4.3"
ic-agent = "0.41.0"
k256 = "0.13.4"
log = "0.4.29"
rand = "0.9.2"
reqwest = { version  = "0.12.26", features = ["json"] }
sentry = "0.46.2"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "tokio-macros"] }
utoipa = "5.4.0"
uuid = { version = "1.19.0", features = ["v4"] }
yral-canisters-client = { git = "https://github.com/dolr-ai/yral-common", version = "0.1.0", features = ["user-post-service", "user-info-service"]}
yral-types = { git = "https://github.com/dolr-ai/yral-common", version = "0.1.0" }

[features]
local = []
default = []
